--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.heshanthenura.teamrocket'
-    mainClass = 'com.heshanthenura.teamrocket.HelloApplication'
+    mainClass = 'com.heshanthenura.teamrocket.Launcher'
 }
 
 javafx {
