--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,16 @@ application {
     mainClass = 'com.heshanthenura.teamrocket.Launcher'
 }
 
+task customFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'com.heshanthenura.teamrocket.Launcher'
+    }
+    archiveBaseName = 'DemoJAR'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 javafx {
     version = '21'
     modules = ['javafx.controls', 'javafx.fxml']
