added database connection

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ javafx {
 dependencies {
 
     implementation 'com.opencsv:opencsv:5.7.1'
+    implementation 'com.h2database:h2:2.1.214'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
